# docs

./: .gitignore  .markdownlint-cli2.yaml  .vale.ini  .yamllint.yml  AGENTS.md  Dockerfile  Makefile  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  versions.json
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  docs.yml  lint.yml  update-config-docs.yml  update-openapi-docs.yml  update-proto-docs.yml  zizmor.yml
.vale/: output.tmpl
4.x/: index.html
context/: briefing.md  diataxis-contract.md  source-inventory.md  vocabulary.md  workflows.md
docs/: .pages  index.md
docs/blog/: .authors.yml
docs/concepts/: .pages  about-vulnerability-data-sources.md  access-control.md  changes-in-v5.md  component-integrity-verification.md  component-policies.md  index.md  notifications.md  projects.md  tags.md  time-series-metrics.md  vulnerability-findings.md  vulnerability-policies.md
docs/guides/: .pages  index.md
docs/includes/: abbreviations.md
docs/reference/: .pages  analyzers.md  badges.md  cel-expressions.md  community-integrations.md  container-images.md  file-formats.md  index.md  permissions.md  projects.md  vulnerability-policies.md
docs/stylesheets/: extra.css
docs/tutorials/: .pages  creating-a-component-policy.md  docker-compose.quickstart.yml  index.md  (+3 more)
existing-docs/: README.md
next/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
overrides/: main.html
scripts/: generate_config_docs.py
source/: README.md
(+219 files in other folders)
