[project]
name = "dependency-track-docs"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "mike==2.2.0",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-material[imaging]==9.7.6",
  "mkdocs-rss-plugin==1.19.0",
  "mkdocs-swagger-ui-tag==0.8.0",
]

[dependency-groups]
generate = [
  "jinja2>=3.1.0",
]
